<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/orange"
    tools:context=".activities.LoginActivity" >

    <TextView
        android:id="@+id/wicked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/wicked"
        android:layout_marginTop="40dp"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/twitter_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/wicked"
        android:text="@string/twitter_app"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>


    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/twitter_logo"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/twitter_app"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/app_logo" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_margin="25dp"
        android:onClick="loginToRest"
        android:text="@string/login_label"
        android:textColor="@color/orange"
        android:background="@drawable/white_button"/>

</RelativeLayout>